--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Now we dev'n eith stylr</h1>
+    <h1>Github Tutorial: Unlocking the power of Git</h1>
+    <p>Git is a fanatastic tool that allows developers</p>
 </body>
 </html>
