Conflict merge example
asdfasf

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Github Tutorial: Unlocking the power of Git</h1>
     <p>Git is a fanatastic tool that allows developers</p>
+    <p>sdklfhasjkdfhashkdfhaklsfhklaklskdhfkaslfhasd</p>
 </body>
 </html>
